# AIRA

./: .gitignore  .pre-commit-config.yaml  .pylintrc  GUI_v1.py  README.md  app.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: pull-request.dev.workflow.yml
3daira/: intensity.py
3daira/audio_tools/: filtering.py  issues_check.py  utils.py
aira/: __init__.py  core.py  filtering.py  formater.py  formatter.py  gui.py  intensity.py  plot.py  pyqt_gui.py  reflections.py  streamlit_app.py  utils.py
aira/engine/: filtering.py  input.py  intensity.py  plot.py  pressure.py  reflections.py
aira/simulation/: __init__.py  example.py
aira/utils/: __init__.py  formatter.py  utils.py
audio_tools/: filtering.py  formater.py  issues_check.py  utils.py
test/: plot_hedgehog.py  test_intensity.py  test_reflections.py  test_utils.py
test/mock_data/: intensity.py  recordings.py
