[tool.poetry]
name = "aira"
version = "0.1.0"
description = "3D Ambisonics Impulse Response Analyzer"
authors = [
    "Ivan Pupkin <ipupkin@untref.edu.ar>",
    "Nahuel Passano <passano43632@estudiantes.untref.edu.ar>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.24.3"
librosa = "^0.10.0"
scipy = "^1.10.1"
soundfile = "^0.12.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pylint = "^2.17.3"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
